[gd_scene load_steps=2 format=3 uid="uid://bojr524aeduio"]

[ext_resource type="Script" path="res://Components/HealthComponent/HealthComponent.gd" id="1_6a1ed"]

[node name="HealthComponent" type="Node"]
script = ExtResource("1_6a1ed")

[node name="DamageCooldownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="DamageCooldownTimer" to="." method="_on_damage_cooldown_timer_timeout"]
